--- a/gw/projects/timer_uart_gpio_irqs/CMakeLists.txt
+++ b/gw/projects/timer_uart_gpio_irqs/CMakeLists.txt
@@ -3,17 +3,17 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   gw_project_rules_vivado(
       TOP_MODULE boxlambda_top
       PROJECT_NAME timer_uart_gpio_irqs
-      MEM_FILE_TARGET timer_uart_gpio_irqs_ram
+      MEM_FILE_TARGET timer_uart_gpio_irqs
   )
 else()
   #gw_project_rules_verilator() function is defined in the parent CMakeLists.txt.
   gw_project_rules_verilator(
       TOP_MODULE sim_main
       PROJECT_NAME timer_uart_gpio_irqs
-      MEM_FILE_TARGET timer_uart_gpio_irqs_ram
+      MEM_FILE_TARGET timer_uart_gpio_irqs
       VERILATOR_FLAGS
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/"
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
   )
   #Add testcase.
   add_test(NAME timer_uart_gpio_irqs_test
