--- a/gw/projects/ym2149_dac_test/CMakeLists.txt
+++ b/gw/projects/ym2149_dac_test/CMakeLists.txt
@@ -3,16 +3,16 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   gw_project_rules_vivado(
       TOP_MODULE boxlambda_top
       PROJECT_NAME ym2149_dac_test
-      MEM_FILE_TARGET ym2149_test_ram
+      MEM_FILE_TARGET ym2149_test
   )
 else()
   #gw_project_rules_verilator() function is defined in the parent CMakeLists.txt.
   gw_project_rules_verilator(
       TOP_MODULE sim_main
       PROJECT_NAME ym2149_dac_test
-      MEM_FILE_TARGET ym2149_test_ram
+      MEM_FILE_TARGET ym2149_test
       VERILATOR_FLAGS
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/"
           "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
   )
 
