--- a/sw/projects/rtcc_test/CMakeLists.txt
+++ b/sw/projects/rtcc_test/CMakeLists.txt
@@ -1,52 +1,25 @@
 #
-# RTCC Test RAM Build
+# RTCC Test
 #
-add_executable(rtcc_test_ram
+add_executable(rtcc_test
  EXCLUDE_FROM_ALL
  rtcc_test.cpp
  rtcc_cli.cpp
  ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/i2c_cli.cpp
 )
 
-target_compile_options(rtcc_test_ram
+target_compile_options(rtcc_test
  PRIVATE
   -O2 -g
 )
 
-link_and_create_image(rtcc_test_ram
+link_and_create_image(rtcc_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
 
-target_link_libraries(rtcc_test_ram sdram rtcc i3c gpio riscv embedded_cli peek_poke_cli bootstrap)
+target_link_libraries(rtcc_test sdram rtcc i3c gpio riscv embedded_cli peek_poke_cli bootstrap)
 
-target_include_directories(rtcc_test_ram
+target_include_directories(rtcc_test
     PUBLIC
        ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/
 )
-
-#
-# RTCC Test Flash Build
-#
-add_executable(rtcc_test_flsh
- EXCLUDE_FROM_ALL
- rtcc_test.cpp
- rtcc_cli.cpp
- ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/i2c_cli.cpp
-)
-
-target_compile_options(rtcc_test_flsh
- PRIVATE
-  -O2 -g
-)
-
-link_and_create_image(rtcc_test_flsh
- ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
-
-target_link_libraries(rtcc_test_flsh sdram rtcc i2c gpio riscv embedded_cli peek_poke_cli bootstrap)
-
-target_include_directories(rtcc_test_flsh
-    PUBLIC
-       ${PROJECT_SOURCE_DIR}/sw/projects/i2c_test/
-)
-
-add_flash_sw_target(rtcc_test_flsh)
 
