--- a/sw/projects/stsound_test/CMakeLists.txt
+++ b/sw/projects/stsound_test/CMakeLists.txt
@@ -1,59 +1,29 @@
 #
-# ST Sound Test - RAM Build
+# ST Sound Test
 #
-add_executable(stsound_test_ram
+add_executable(stsound_test
  EXCLUDE_FROM_ALL
  stsound_test.cpp
 )
 
-target_include_directories(stsound_test_ram
+target_include_directories(stsound_test
     PRIVATE
       ${PROJECT_SOURCE_DIR}/registers/generated/
 )
 
-target_compile_options(stsound_test_ram
+target_compile_options(stsound_test
  PRIVATE
   -O2 -g
 )
 
 if(CMAKE_BUILD_TYPE STREQUAL "sim")
-  target_compile_definitions(stsound_test_ram PRIVATE -DMEMTEST_SIZE=32768)
+  target_compile_definitions(stsound_test PRIVATE -DMEMTEST_SIZE=32768)
 else() #fpga:
-  target_compile_definitions(stsound_test_ram PRIVATE -DMEMTEST_SIZE=\(256*1024*1024\))
+  target_compile_definitions(stsound_test PRIVATE -DMEMTEST_SIZE=\(256*1024*1024\))
 endif()
 
 #Function defined in parent CMakeLists.txt file:
-link_and_create_image(stsound_test_ram ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+link_and_create_image(stsound_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
 
-target_link_libraries(stsound_test_ram sdram stsound fatfs gpio riscv bootstrap)
+target_link_libraries(stsound_test sdram stsound fatfs gpio riscv bootstrap)
 
-#
-# ST Sound Test - Flash Build
-#
-add_executable(stsound_test_flsh
- EXCLUDE_FROM_ALL
- stsound_test.cpp
-)
-
-target_include_directories(stsound_test_flsh
-    PRIVATE
-      ${PROJECT_SOURCE_DIR}/registers/generated/
-)
-
-target_compile_options(stsound_test_flsh
- PRIVATE
-  -O2 -g
-)
-
-if(CMAKE_BUILD_TYPE STREQUAL "sim")
-  target_compile_definitions(stsound_test_flsh PRIVATE -DMEMTEST_SIZE=32768)
-else() #fpga:
-  target_compile_definitions(stsound_test_flsh PRIVATE -DMEMTEST_SIZE=\(256*1024*1024\))
-endif()
-
-#Function defined in parent CMakeLists.txt file:
-link_and_create_image(stsound_test_flsh ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
-
-target_link_libraries(stsound_test_flsh sdram stsound fatfs gpio riscv bootstrap)
-
-add_flash_sw_target(stsound_test_flsh)
