--- a/sw/projects/timer_uart_gpio_irqs/CMakeLists.txt
+++ b/sw/projects/timer_uart_gpio_irqs/CMakeLists.txt
@@ -1,37 +1,18 @@
 #
 # Timer, UART, GPIO and IRQ test - RAM Build
 #
-add_executable(timer_uart_gpio_irqs_ram
+add_executable(timer_uart_gpio_irqs
  EXCLUDE_FROM_ALL
  timer_uart_gpio_irqs.cpp
 )
 
-target_compile_options(timer_uart_gpio_irqs_ram
+target_compile_options(timer_uart_gpio_irqs
  PRIVATE
   -O2 -g
 )
 
-link_and_create_image(timer_uart_gpio_irqs_ram
+link_and_create_image(timer_uart_gpio_irqs
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
 
-target_link_libraries(timer_uart_gpio_irqs_ram timer gpio riscv interrupts bootstrap)
+target_link_libraries(timer_uart_gpio_irqs timer gpio riscv interrupts bootstrap)
 
-#
-# Timer, UART, GPIO and IRQ test - Flash Build
-#
-add_executable(timer_uart_gpio_irqs_flsh
- EXCLUDE_FROM_ALL
- timer_uart_gpio_irqs.cpp
-)
-
-target_compile_options(timer_uart_gpio_irqs_flsh
- PRIVATE
-  -O2 -g
-)
-
-link_and_create_image(timer_uart_gpio_irqs_flsh
- ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
-
-target_link_libraries(timer_uart_gpio_irqs_flsh timer gpio riscv interrupts bootstrap)
-
-add_flash_sw_target(timer_uart_gpio_irqs_flsh)
