--- a/gw/projects/sdspi_test/CMakeLists.txt
+++ b/gw/projects/sdspi_test/CMakeLists.txt
@@ -3,17 +3,17 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   gw_project_rules_vivado(
       TOP_MODULE boxlambda_top
       PROJECT_NAME sdspi_test
-      MEM_FILE_TARGET sdspi_test_ram
+      MEM_FILE_TARGET sdspi_test
   )
 else()
   #gw_project_rules_verilator() function is defined in the parent CMakeLists.txt.
   gw_project_rules_verilator(
       TOP_MODULE sim_main
       PROJECT_NAME sdspi_test
-      MEM_FILE_TARGET sdspi_test_ram
+      MEM_FILE_TARGET sdspi_test
       VERILATOR_FLAGS
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/"
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
           "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/sdspi/bench/cpp"
   )
 
