--- a/gw/projects/usb_hid_sys_test/CMakeLists.txt
+++ b/gw/projects/usb_hid_sys_test/CMakeLists.txt
@@ -3,17 +3,17 @@ if(CMAKE_BUILD_TYPE STREQUAL "fpga")
   gw_project_rules_vivado(
       TOP_MODULE boxlambda_top
       PROJECT_NAME usb_hid_sys_test
-      MEM_FILE_TARGET usb_hid_sys_test_ram
+      MEM_FILE_TARGET usb_hid_sys_test
   )
 else()
   #gw_project_rules_verilator() function is defined in the parent CMakeLists.txt.
   gw_project_rules_verilator(
       TOP_MODULE sim_main
       PROJECT_NAME usb_hid_sys_test
-      MEM_FILE_TARGET usb_hid_sys_test_ram
+      MEM_FILE_TARGET usb_hid_sys_test
       VERILATOR_FLAGS
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/" 
-          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang" 
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/wbuart32/bench/cpp/"
+          "-CFLAGS -I${PROJECT_SOURCE_DIR}/sub/riscv-dbg/tb/remote_bitbang"
   )
 
   #Add testcase.
