--- a/sw/projects/reset_test/CMakeLists.txt
+++ b/sw/projects/reset_test/CMakeLists.txt
@@ -1,45 +1,22 @@
-#Reset test program - RAM Build
+#Reset test program
 
-add_executable(reset_test_ram
+add_executable(reset_test
  EXCLUDE_FROM_ALL
  reset_test.cpp
 )
 
-target_compile_options(reset_test_ram
+target_compile_options(reset_test
  PRIVATE
   -O2 -g
 )
 
-target_include_directories(reset_test_ram
+target_include_directories(reset_test
   PRIVATE
   ${PROJECT_SOURCE_DIR}/registers/generated/
 )
 
-link_and_create_image(reset_test_ram
+link_and_create_image(reset_test
  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
 
-target_link_libraries(reset_test_ram sdram gpio riscv bootstrap)
+target_link_libraries(reset_test sdram gpio riscv bootstrap)
 
-#Reset test program - Flash Build
-
-add_executable(reset_test_flsh
- EXCLUDE_FROM_ALL
- reset_test.cpp
-)
-
-target_compile_options(reset_test_flsh
- PRIVATE
-  -O2 -g
-)
-
-target_include_directories(reset_test_flsh
-  PRIVATE
-  ${PROJECT_SOURCE_DIR}/registers/generated/
-)
-
-link_and_create_image(reset_test_flsh
- ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
-
-target_link_libraries(reset_test_flsh sdram gpio riscv bootstrap)
-
-add_flash_sw_target(reset_test_flsh)
