--- a/sw/projects/vera_test/CMakeLists.txt
+++ b/sw/projects/vera_test/CMakeLists.txt
@@ -1,37 +1,18 @@
 #
-# VERA Test- RAM Build
+# VERA Test
 #
-add_executable(vera_test_ram
+add_executable(vera_test
  EXCLUDE_FROM_ALL
  vera_test.cpp
 )
 
-target_compile_options(vera_test_ram
+target_compile_options(vera_test
  PRIVATE
   -O2 -g
 )
 
 #Function defined in parent CMakeLists.txt file:
-link_and_create_image(vera_test_ram ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+link_and_create_image(vera_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
 
-target_link_libraries(vera_test_ram vera sdram gpio riscv interrupts bootstrap)
+target_link_libraries(vera_test vera sdram gpio riscv interrupts bootstrap)
 
-#
-# VERA Test- Flash Build
-#
-add_executable(vera_test_flsh
- EXCLUDE_FROM_ALL
- vera_test.cpp
-)
-
-target_compile_options(vera_test_flsh
- PRIVATE
-  -O2 -g
-)
-
-#Function defined in parent CMakeLists.txt file:
-link_and_create_image(vera_test_flsh ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
-
-target_link_libraries(vera_test_flsh vera sdram gpio riscv interrupts bootstrap)
-
-add_flash_sw_target(vera_test_flsh)
