--- a/sw/projects/ym2149_test/CMakeLists.txt
+++ b/sw/projects/ym2149_test/CMakeLists.txt
@@ -1,47 +1,23 @@
 #
-# YM2149 Test - RAM Build
+# YM2149 Test
 #
-add_executable(ym2149_test_ram
+add_executable(ym2149_test
  EXCLUDE_FROM_ALL
  ym2149_test.cpp
 )
 
-target_compile_options(ym2149_test_ram
+target_compile_options(ym2149_test
  PRIVATE
   -O2
 )
 
-target_include_directories(ym2149_test_ram
+target_include_directories(ym2149_test
   PRIVATE
   ${PROJECT_SOURCE_DIR}/registers/generated/
 )
 
 #Function defined in parent CMakeLists.txt file:
-link_and_create_image(ym2149_test_ram ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+link_and_create_image(ym2149_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
 
-target_link_libraries(ym2149_test_ram gpio riscv bootstrap)
+target_link_libraries(ym2149_test gpio riscv bootstrap)
 
-#
-# YM2149 Test - Flash Build
-#
-add_executable(ym2149_test_flsh
- EXCLUDE_FROM_ALL
- ym2149_test.cpp
-)
-
-target_compile_options(ym2149_test_flsh
- PRIVATE
-  -O2
-)
-
-target_include_directories(ym2149_test_flsh
-  PRIVATE
-  ${PROJECT_SOURCE_DIR}/registers/generated/
-)
-
-#Function defined in parent CMakeLists.txt file:
-link_and_create_image(ym2149_test_flsh ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_flash_boot.ld)
-
-target_link_libraries(ym2149_test_flsh gpio riscv bootstrap)
-
-add_flash_sw_target(ym2149_test_flsh)
