--- a/registers/definitions/vera.yaml
+++ b/registers/definitions/vera.yaml
@@ -271,18 +271,18 @@ regmap:
     description: Layer 0 tile base register.
     address: 72
     bitfields:
-    -   name: TILE_WIDTH
-        description: Tile width.
+    -   name: TILE_BITMAP_WIDTH
+        description: Tile or Bitmap width.
         reset: 0
         width: 1
         lsb: 0
         access: rw
         enums:
-        -   name: TILE_WIDTH_8
-            description: 8 pixel tile width.
+        -   name: TILE_BITMAP_W_8_320
+            description: 8 pixel tile width, 320 pixels bitmap width.
             value: 0
-        -   name: TILE_WIDTH_16
-            description: 16 pixel tile width.
+        -   name: TILE_BITMAP_W_16_640
+            description: 16 pixel tile width, 640 pixels bitmap width.
             value: 1
     -   name: TILE_HEIGHT
         description: Tile height.
@@ -307,11 +307,17 @@ regmap:
     description: Layer 0 horizontal scroll register.
     address: 80
     bitfields:
-    -   name: VALUE
-        description: Specifies the horizontal scroll offset. A value between 0 and 4095 can be used. Increasing the value will cause the picture to move left, decreasing will cause the picture to move right.
+    -   name: HSCROLL_7_0
+        description: Specifies bits 7:0 of the horizontal scroll offset. Increasing the value will cause the picture to move left, decreasing will cause the picture to move right.
         reset: 0
-        width: 12
+        width: 8
         lsb: 0
+        access: rw
+    -   name: HSCROLL_11_8_PAL_OFFSET
+        description: In Tile Mode, specifies bits 11:8 of the horizontal scroll offset. In Bitmap Mode, specifies the palette offset of the bitmap colors.
+        reset: 0
+        width: 4
+        lsb: 8
         access: rw
 -   name: L0_VSCROLL
     description: Layer 0 vertical scroll register.
@@ -411,18 +417,18 @@ regmap:
     description: Layer 1 tile base register.
     address: 136
     bitfields:
-    -   name: TILE_WIDTH
-        description: Tile width.
+    -   name: TILE_BITMAP_WIDTH
+        description: Tile or Bitmap width.
         reset: 0
         width: 1
         lsb: 0
         access: rw
         enums:
-        -   name: TILE_WIDTH_8
-            description: 8 pixel tile width.
+        -   name: TILE_BITMAP_W_8_320
+            description: 8 pixel tile width, 320 pixels bitmap width.
             value: 0
-        -   name: TILE_WIDTH_16
-            description: 16 pixel tile width.
+        -   name: TILE_BITMAP_W_16_640
+            description: 16 pixel tile width, 640 pixels bitmap width.
             value: 1
     -   name: TILE_HEIGHT
         description: Tile height.
@@ -447,11 +453,17 @@ regmap:
     description: Layer 1 horizontal scroll register.
     address: 144
     bitfields:
-    -   name: VALUE
-        description: Specifies the horizontal scroll offset. A value between 0 and 4095 can be used. Increasing the value will cause the picture to move left, decreasing will cause the picture to move right.
+    -   name: HSCROLL_7_0
+        description: Specifies bits 7:0 of the horizontal scroll offset. Increasing the value will cause the picture to move left, decreasing will cause the picture to move right.
         reset: 0
-        width: 12
+        width: 8
         lsb: 0
+        access: rw
+    -   name: HSCROLL_11_8_PAL_OFFSET
+        description: In Tile Mode, specifies bits 11:8 of the horizontal scroll offset. In Bitmap Mode, specifies the palette offset of the bitmap colors.
+        reset: 0
+        width: 4
+        lsb: 8
         access: rw
 -   name: L1_VSCROLL
     description: Layer 1 vertical scroll register.
