Updated vera_test to new HAL

--- a/sw/components/CMakeLists.txt
+++ b/sw/components/CMakeLists.txt
@@ -22,4 +22,5 @@ add_subdirectory(ymodem_cli)
 add_subdirectory(mem_fs_cli)
 add_subdirectory(dfx)
 add_subdirectory(arduino)
+add_subdirectory(terminal)
 
