--- a/registers/definitions/vera.yaml
+++ b/registers/definitions/vera.yaml
@@ -1,6 +1,6 @@
 regmap:
--   name: CTRL
-    description: Control register.
+-   name: CTRL_STATUS
+    description: Control/Status register.
     address: 0
     bitfields:
     -   name: SBNK
@@ -8,6 +8,12 @@ regmap:
         reset: 0
         width: 1
         lsb: 0
+        access: rw
+    -   name: CAPTURE_EN
+        description: Enable VGA line capture. Bit returns to 0 when capture has completed.
+        reset: 0
+        width: 1
+        lsb: 1
         access: rw
 -   name: DC_BORDER
     description: Display composer border register.
