--- a/gw/projects/boxlambda_dfx/Bender.yml
+++ b/gw/projects/boxlambda_dfx/Bender.yml
@@ -40,6 +40,7 @@ sources:
       #this flag.
       DFX_SYNTHESIZE_EMPTY_MODULE: ~
       #TRACE_ALL_INSTRUCTIONS: ~
+      IBEX_BOOT_ADDR: 32'h11500000
     files:
       - ../boxlambda_base/rtl/boxlambda_top.sv
   - target: verilator
@@ -59,6 +60,7 @@ sources:
       VS0: ~
       ACK_INVALID_ADDR:  ~
       #TRACE_ALL_INSTRUCTIONS: ~
+      IBEX_BOOT_ADDR: 32'h00000000
     files:
       - sim/sim_main.cpp
       - ../boxlambda_base/rtl/boxlambda_top.sv
