--- a/sw/projects/dfx_test/CMakeLists.txt
+++ b/sw/projects/dfx_test/CMakeLists.txt
@@ -30,8 +30,13 @@ target_include_directories(dfx_test
   ${PROJECT_SOURCE_DIR}/sw/components/vs0_hal/
 )
 
-link_and_create_image(dfx_test
- ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+if(CMAKE_BUILD_TYPE STREQUAL "sim")
+  link_and_create_image(dfx_test
+   ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+else()
+  link_and_create_image(dfx_test
+   ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_ddr_to_imem_boot.ld)
+endif()
 
 target_link_libraries(dfx_test sdram gpio embedded_cli riscv interrupts peek_poke_cli j1b_hal fatfs ymodem_cli mem_fs_cli dfx bootstrap)
 
