--- a/sw/projects/invalid_address/CMakeLists.txt
+++ b/sw/projects/invalid_address/CMakeLists.txt
@@ -10,8 +10,12 @@ add_executable(invalid_address
 target_compile_options(invalid_address
  PRIVATE -g)
 
-#Function defined in parent CMakeLists.txt file:
-link_and_create_image(invalid_address ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+if(CMAKE_BUILD_TYPE STREQUAL "sim")
+  link_and_create_image(invalid_address ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+else()
+  link_and_create_image(invalid_address
+  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_ddr_to_imem_boot.ld)
+endif()
 
 target_link_libraries(invalid_address gpio riscv bootstrap)
 
