--- a/gw/components/ibex/Bender.yml
+++ b/gw/components/ibex/Bender.yml
@@ -6,7 +6,7 @@ package:
   name: ibex
 
 sources:
-  - target: any(verilator)
+  - target: verilator
     include_dirs:
       - ../../../build/sim-a7-100/codegen/ibex/src/lowrisc_dv_crypto_prince_ref_0.1
       - ../../../build/sim-a7-100/codegen/ibex/src/lowrisc_dv_dv_fcov_macros_0
@@ -18,6 +18,7 @@ sources:
       - ../../../build/sim-a7-100/codegen/ibex/src/lowrisc_dv_verilator_memutil_dpi_scrambled_0/cpp
       - ../../../build/sim-a7-100/codegen/ibex/src/lowrisc_prim_assert_0.1/rtl
     files:
+      - lint.vlt
       - ../../../build/sim-a7-100/codegen/ibex/src/lowrisc_ibex_ibex_pkg_0.1/rtl/ibex_pkg.sv
       - ../../../build/sim-a7-100/codegen/ibex/src/lowrisc_prim_abstract_prim_pkg_0.1/prim_pkg.sv
       - ../../../build/sim-a7-100/codegen/ibex/src/lowrisc_prim_ram_1p_pkg_0/rtl/prim_ram_1p_pkg.sv
