--- a/sw/projects/hello_world/CMakeLists.txt
+++ b/sw/projects/hello_world/CMakeLists.txt
@@ -11,8 +11,13 @@ add_executable(hello_world
 target_compile_options(hello_world
  PRIVATE -g)
 
-#Function defined in parent CMakeLists.txt file:
-link_and_create_image(hello_world ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+if(CMAKE_BUILD_TYPE STREQUAL "sim")
+  link_and_create_image(hello_world
+  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+else()
+  link_and_create_image(hello_world
+  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_ddr_to_imem_boot.ld)
+endif()
 
 target_link_libraries(hello_world gpio riscv bootstrap)
 
