--- a/sw/projects/sdspi_test/CMakeLists.txt
+++ b/sw/projects/sdspi_test/CMakeLists.txt
@@ -21,8 +21,12 @@ target_include_directories(sdspi_test
      ${PROJECT_SOURCE_DIR}/registers/generated/
 )
 
-#Function defined in parent CMakeLists.txt file:
-link_and_create_image(sdspi_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+if(CMAKE_BUILD_TYPE STREQUAL "sim")
+  link_and_create_image(sdspi_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+else()
+  link_and_create_image(sdspi_test
+  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_ddr_to_imem_boot.ld)
+endif()
 
 target_link_libraries(sdspi_test gpio riscv interrupts bootstrap)
 
