--- a/sw/projects/usb_hid_sys_test/CMakeLists.txt
+++ b/sw/projects/usb_hid_sys_test/CMakeLists.txt
@@ -10,8 +10,12 @@ target_compile_options(usb_hid_sys_test
   -O2 -g
 )
 
-link_and_create_image(usb_hid_sys_test
- ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+if(CMAKE_BUILD_TYPE STREQUAL "sim")
+  link_and_create_image(usb_hid_sys_test ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_imem_boot.ld)
+else()
+  link_and_create_image(usb_hid_sys_test
+  ${PROJECT_SOURCE_DIR}/sw/components/bootstrap/link_ddr_to_imem_boot.ld)
+endif()
 
 target_link_libraries(usb_hid_sys_test usb_hid gpio riscv interrupts bootstrap)
 
