--- a/sw/projects/CMakeLists.txt
+++ b/sw/projects/CMakeLists.txt
@@ -75,4 +75,5 @@ add_subdirectory(invalid_address)
 add_subdirectory(ibex_perf_test)
 add_subdirectory(ulisp)
 add_subdirectory(mforth)
+add_subdirectory(time_rtc_set)
 
